--- a/scss/sp/_common.scss
+++ b/scss/sp/_common.scss
@@ -218,12 +218,16 @@ header {
     }
   }
   .big_menu{
+    visibility: hidden;
     overflow: auto;
+    -webkit-overflow-scrolling:touch;
     width: 100%;
     height: 0;
     position: fixed;
     top: 0;
     left: 0;
+    right: 0;
+    bottom: 0;
     z-index: 1000;
     background-color: #ffffff;
     backdrop-filter: blur(3px);
@@ -233,6 +237,7 @@ header {
     }
     &.active{
       height: 100%;
+      visibility: visible;
     }
     .float_menu{
       box-sizing: border-box;
